# Back_reload

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .txt  Dockerfile  Dockerfile-dev  Dockerfile_1  README.md  api_post_examples  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt  response_example.json  setup.cfg
.github/workflows/: deploy_workflow.yml  pre_main_workflow.yml
app/: urls.py
app/chat/: admin.py  apps.py  consumers.py  middleware.py  models.py  redis_client.py  routing.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
app/file/: admin.py  apps.py  exception.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  urls.py  views.py
app/main_page/: admin.py  apps.py  error_message.py  (+5 more)
chat/: admin.py  api.py  consumers.py  models.py  routing.py  serializers.py  urls.py
config/: .env.temp  api_docs.py  asgi.py  celery.py  routing.py  settings.py  urls.py  yasg.py
dev-env/: nginx.conf
infra-dev/: Dockerfile  docker-compose.yml
main_page/: admin.py  email.py  error_message.py  exceptions.py  models.py  permissions.py  serializers.py  urls.py  validators.py  views.py
nginx/: Dockerfile  host.conf
orders/: admin.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
products/: admin.py  models.py  serializers.py  urls.py  views.py
questionnaire/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
templates/: base.html  header.html
tests/: common.py  test_00_user_registration.py  test_01_users.py  test_users.py
utils/: admin.py  decorators.py  errorcode.py  file_work.py  image_work.py  initial_data_work.py  models.py  permissions.py  serializers.py  storage.py  urls.py  user_generator.py  views.py
(+403 files in other folders)
