[tool.poetry]
name = "back-reload"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "back_reload"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.2"
djoser = "^2.2.0"
pillow = "^9.5.0"
psycopg2-binary = "^2.9.6"
python-environ = "^0.4.54"
gunicorn = "^20.1.0"
setuptools = "^68.0.0"
channels = "^4.0.0"
channels-redis = "^4.1.0"
daphne = "^4.0.0"

[tool.poetry.group.dev.dependencies]
drf-yasg = "^1.21.6"
flake8 = "^6.0.0"
isort = "^5.12.0"
django-debug-toolbar = "^4.1.0"
pre-commit = "^3.3.3"
black = "^23.3.0"
pep8-naming = "^0.13.3"
flake8-broken-line = "^1.0.0"
flake8-return = "^1.2.0"
flake8-isort = "^6.0.0"
pytest = "^7.3.2"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
